samples/_failures_safe/1761276557_a56f9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_177a34b0.c: In function ‘main’:
./samples/SAFE/__tmp_177a34b0.c:131: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_177a34b0.c:130:5: error: expected declaration or statement at end of input
  130 |     if
      |     ^~
